<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">TGuide</string>
    <string name="turnersyndromesocietyofcanada">Turner Syndrome Society of Canada</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notpad_hint"> Welcome to TGuide!\nUse this space to keep your notes.</string>
    <string name="txt_notepad">Use this space to keep any notes you may have.</string>
    <string name="reminder_Hint">No Scheduled Events</string>
    <string name="reminder_titleText">Reminder Title</string>
    <string name="reminder_descripHint">Description</string>
    <string name="reminder_date">Date</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_repeat_switch">Repeat</string>
    <string name="reminder_switch_on">On</string>
    <string name="reminder_switch_off">Off</string>
    <string name="reminder_interval_time">Repetition Interval</string>
    <string name="reminder_type_repitition">Repetition Type</string>
    <string name="reminder_MenuTrash">Delete</string>
    <string name="reminder_MenuSave">Save</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_msg">Quit and discard changes?</string>
    <string name="delete_dialog_msg">Delete Reminder?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder Deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="title_blank">Error! Title cannot be blank.</string>
    <string name="updateComplete">Reminder Updated</string>
    <string name="updateFailed">Reminder Update Failed</string>
    <string name="saved">Reminder Saved</string>
    <string name="savedFailed">Reminder Save Failed</string>
    <string name="buttonEx">This is a button</string>
    <string name="repeatOptionsTitle">Repeat Options</string>
    <string name="repeatEvery">Every</string>
    <string name="repeathint">1</string>
    <string name="save">Save</string>
    <string-array name="repeatInterval">
        <item>Minute(s)</item>
        <item>Hour(s)</item>
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month(s)</item>
        <item>Year(s)</item>
    </string-array>
    <string name="repeatDefault">Minute(s)</string>
    <string name="welcome">Welcome to TGuide!</string>
    <string name="welcomeNotificationTitle">How are you doing?</string>
    <string name="welcomeNotificationDescrip">Remember to complete your checklist!</string>
    <string name="channelTitle">TGuide Reminders</string>
    <string name="channelDesp">TGuide Reminders Channel</string>
    <string name="homeContentDesp">Welcome to TGuide!</string>
    <string name="whatTurner">What is Turner Syndrome?</string>
    <string name="whatTurnerAns">Turner Syndrome (TS) is a condition that affects only girls and women.
    Most people have 23 pairs of chromosomes, with 1 pair being sex chromosomes. Most males have
    an X and Y sex chromosome and most females have two X chromosomes. In TS, there
    is an absence of all or part of the second X chromosome in some or all of the cells of the body.
    </string>
    <string name="typesTurner">Are there different types of Turner Syndrome?</string>
    <string name="typesTurnerAns">There are multiple types of TS. Females who
    are completely missing an X chromosome have "classic" TS. Others are missing only
    part of the second X chromosome or have structural rearrangements of the chromosome. In some
    females, only some cells are missing the X chromosome, known as a mosaic karyotype. Knowing your
    type is important because each type is associated with different health issues.</string>
    <string name="impTurner">Why is it important to know if someone has Turner Syndrome?</string>
    <string name="impTurnerAns">Missing part of or all of one X chromosome is associated with a
    range of health, development, social and learning challenges which affects females with TS
        to different extends. It is important to diagnosis TS as early as possible
    so that your health care provider can determine whether you have health issues that need to be
    treated or watched.</string>
    <string name="treatTurner">Can Turner Syndrome be treated?</string>
    <string name="treatTurnerAns">TS is not a disease, but a genetic condition that is
    associated with a range of health concerns. TS is not directly treated by a health
    care provider, but the individual health concerns that arise are monitored and treated. New
    medical developments allow women with TS who are interested in starting a family seek the help
    of an obstetrician who specializes in-vitro fertilization. A girl with TS may get
    growth horomone under the supervision of a pediartric endocrinologist.</string>
    <string name="button1Title">What is TGuide?</string>
    <string name="button1Text">TGuide is an app to help you manage your condition. It provides a framework to help you keep track of when to schedule appointments. Please note that
    TGuide is only meant to aid you in managing your condition and is not responsible for any missed appointments or other issues that may arise
    when using this app.</string>
    <string name="button2Title">Why should I complete the checklist?</string>
    <string name="button2Text">Managing a chronic condition can be difficult. Completing a checklist every couple of months can help
    you stay on track and see how you are doing.</string>
    <string name="button3Title">What are surveillance times?</string>
    <string name="button3Text">The surveillance times outline when to see your health care provider. The surveillance times table
        provides you with a place to keep track of when you need to make appointments and will remind you when you are due!</string>
    <string name="button4Title">I keep getting reminders every few months, can I get rid of them?</string>
    <string name="button4Text">Unfortunately not, they are meant to remind you to fill out your checklist to help you keep track of how you are doing!</string>
    <string name="button5Title">Where can I go for more information?</string>
    <string name="button5Text">Great question!
        \n\nTo learn more about the Turner Society of Canada and the resources it has visit; www.turnersyndrome.ca
        \n\nA great place to learn about sexual health is; www.sexualityandu.ca
        \n\nMost importantly, your health care provider can be a great resource for any questions you may have!
    </string>
    <string name="button6Title">Can I contact TGuide?</string>
    <string name="button6Text">Of course, if you are interested in providing feedback or have any questions/concerns about TGuide,
        please feel free to email us at contacttguide@gmail.com or leave a comment on the app store. We are always looking for
        new ways to improve the app! You can also contact the Turner Society of Canada at info@turnersyndrome.ca.
    </string>
    <string name="button7Title">What happens if I get a new phone?</string>
    <string name="button7Text">All of your information is saved within your account so just download TGuide and login in!
        However, even though all your calendar events will be saved, you will not receive a reminder for these.
    </string>
    <string name="titleChecklist">Checklist Description</string>
    <string name="medChecklist">Renew Prescriptions (if needed)</string>
    <string name="appChecklist">Schedule Future Appointments</string>
    <string name="infoChecklsit">Collect Appointment Forms (if needed)</string>
    <string name="reflectCheclist">Complete Reflection Actiivty</string>
    <string name="refreshDesp">Refresh Checklist</string>
    <string name="appConfirm">Appointments Confirmation</string>
    <string name="appCalendar">Have you put these appointments in your calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selfReflection">Reflection and meditation can help to reduce stress and anxiety. It is a great way to reflect on your daily life.
        Try to find a quiet room and take a few minutes out of your day for yourself. Some questions to think about are:
        \n\t - How have you been doing recently?
        \n\t - Are you taking care of yourself physically?
        \n\t - What about mentally?
        \n\t - Do you feel stressed? How come?
        \n\t - Do you feel supported?
        \n\t - Do changes need to be made in your life?
        \n\t - Are you content?
        \n\nTry using the audio as a guide to help you with your reflection and meditation practice.
    </string>
    <string name="PlayAudio">Play Audio</string>
    <string name="PauseAudio">Stop Audio</string>
    <string name="rockDescrip">Relaxing pillar of rocks.</string>
    <string name="physicalExam">Physical Exam</string>
    <string name="PAP">Breast and Pelvic</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="BMI">BMI (weight)</string>
    <string name="lyphedema">Lymphedema</string>
    <string name="moleAssessment">Mole Assessment</string>
    <string name="screeningWork">Screening Blood Work</string>
    <string name="thyroidDisease">Thyroid Disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="kidneyDisease">Kidney Disease</string>
    <string name="highCholesterol">Cholesterol</string>
    <string name="celiacDisease">Celiac Disease</string>
    <string name="cardiacExamination">Cardiac Examination</string>
    <string name="ECG">ECG</string>
    <string name="Echo">Echo</string>
    <string name="CTMRI">CT/MRI (if necessary)</string>
    <string name="prophAnti">Antibiotic Prophylaxis</string>
    <string name="Other">Other</string>
    <string name="yearly">Yearly</string>
    <string name="enterDate">Enter Date</string>
    <string name="enterTime">Enter Time</string>
    <string name="next">Next</string>
    <string name="welcomeDialogBegin">Let\'s Begin!</string>
    <string name="welcomeDialog">TGuide helps you keep track of your appoinments and when you are due
        to see your health care provider. You can create reminders to keep track of your appointments.
        The TGuide checklist will help to keep you on track. TGuide\'s reflection and notepad are quick ways to
        help you with mindfulness and stay organized with your thoughts and daily routine. If you want to learn more, check out
        the FAQ page. Please note that TGuide is not responsible for any missed appointments or anything else that may
        occur while using this app.</string>
    <string name="intro2Dialog">Before we begin, please check all that apply to you. This
        will help us determine when it is best to see your health care provider. You can change these values anytime in the
    account settings.</string>
    <string name="heartAbnorm">I have one or more HEART abnormalities</string>
    <string name="hearingAbnorm">I have one or more HEARING abnormalities</string>
    <string name="welcomeTGuide">Welcome to TGuide</string>
    <string name="welcomeTGuideDialog">This simple, easy to use application aims to help individuals with Turner Syndrome
        manage their condition.</string>
    <string name="logocontentdesp">Turner Syndrome Society Logo</string>
</resources>