<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tguide.AboutTurner">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatTurner"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatTurnerAns"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/typesTurner"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/typesTurnerAns"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/impTurner"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/impTurnerAns"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatTurner"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatTurnerAns"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>
    </ScrollView>

</FrameLayout>
