<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.turner.android.tguide.FAQ">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/faqbackground">

        <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#a281c7"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/button1Title"
        android:textColor="@color/mdtp_white" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:text="@string/button1Text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#a281c7"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/button2Title"
            android:textColor="@color/mdtp_white" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:text="@string/button2Text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#a281c7"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/button3Title"
            android:textColor="@color/mdtp_white" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:text="@string/button3Text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#a281c7"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/button4Title"
            android:textColor="@color/mdtp_white" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:text="@string/button4Text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#a281c7"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/button5Title"
            android:textColor="@color/mdtp_white" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:text="@string/button5Text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#a281c7"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/button6Title"
            android:textColor="@color/mdtp_white" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:text="@string/button6Text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#a281c7"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/button7Title"
            android:textColor="@color/mdtp_white" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/colorWhite"
            android:text="@string/button7Text"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>
