<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tguide.IntroductionOne"
    android:background="@drawable/faqbackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/turnersyndromelogo"
            android:contentDescription="@string/logocontentdesp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeTGuide"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeTGuideDialog"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@android:color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeDialog"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="30dp"
            android:textSize="17sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/introductionOneBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:text="@string/next"
        android:textSize="19sp"/>

</RelativeLayout>
