<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/dateSurveillacne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/reminder_date"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/dateIdSurveillance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="46dp"
            android:hint="@string/enterDate"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/timeSurveillacne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_time"
            android:textSize="25sp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/timeIdSurveillance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/enterTime"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"/>

    </RelativeLayout>

</LinearLayout>